@@ -44,7 +44,8 @@ trying to optimize the performance of a particular pattern.
 .rs
 .sp
 You should be aware that, because of optimizations in the way PCRE matches
-patterns, callouts sometimes do not happen. For example, if the pattern is
+patterns by default, callouts sometimes do not happen. For example, if the
+pattern is
 .sp
   ab(?C4)cd
 .sp
@@ -52,6 +53,11 @@ PCRE knows that any matching string must contain the letter "d". If the subject
 string is "abyz", the lack of "d" means that matching doesn't ever start, and
 the callout is never reached. However, with "abyd", though the result is still
 no match, the callout is obeyed.
+.P
+You can disable these optimizations by passing the PCRE_NO_START_OPTIMIZE 
+option to \fBpcre_exec()\fP or \fBpcre_dfa_exec()\fP. This slows down the 
+matching process, but does ensure that callouts such as the example above are 
+obeyed.
 .
 .
 .SH "THE CALLOUT INTERFACE"
@@ -172,6 +178,6 @@ Cambridge CB2 3QH, England.
 .rs
 .sp
 .nf
-Last updated: 29 May 2007
-Copyright (c) 1997-2007 University of Cambridge.
+Last updated: 15 March 2009
+Copyright (c) 1997-2009 University of Cambridge.
 .fi
